--- a/css/style.css
+++ b/css/style.css
@@ -179,8 +179,32 @@ position: absolute;
     background-size: cover;
     color: white;
     font-weight: 600;
+     border-radius: 12px;
+    box-shadow: 5px 5px 2px black;
+} 
+.fondito4{
+    background-image: url("../img/f4.png");
+    background-size: cover;
+    color: white;
+    font-weight: 600;
    
-}  
+} 
+.fondito5{
+    background-image: url("../img/f7.png");
+    background-size: cover;
+    color: black;text-shadow: 1px 1px 1px red;
+    font-weight: 700;
+    border-radius: 12px;
+    box-shadow: 2px 2px 1px black;
+   
+} 
+.fondito6{
+    background-image: url("../img/f7.png");
+    background-size: cover;
+    color: white;
+    font-weight: 600;
+   
+} 
 .wrapperexp{
     display: flex;
     flex-direction: column;
